--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-<DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8"
-  </head>
-  <body>
-    <script>
-      id = prompt('아이디를 입력해주세요.')
-      if(id=='egoing'){
-        alert('아이디가 일치 합니다.')
-      } else {
-        alert('아이디가 일치하지 않습니다.')
-      }
-    </script>
+
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <meta charset="utf-8"/>
+    </head>
+    <body>
+        <script>
+            id = prompt('아이디를 입력해주세요.');
+            password = prompt('비밀번호를 입력해 주세요');
+            if((id==="park" || id==='ji' || id==='hun')&&pasword==='4307'){
+                alert('인증했습니다.');
+            } else {
+                alert('인증에 실패했습니다.');
+            }
+        </script>
     </body>
     </html>
