중첩사용과 디버거

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     </head>
     <body>
         <script>
-            id = prompt('아이디를 입력해주세요.');
-            password = prompt('비밀번호를 입력해 주세요');
-            if((id==="park" || id==='ji' || id==='hun')&&pasword==='4307'){
-                alert('인증했습니다.');
-            } else {
-                alert('인증에 실패했습니다.');
-            }
+            
+           for(var i=0; i<5; i++){
+               
+               for(var j = 0; j < 10; j++){
+                   document.write(String(i)+String(j)+'<br />');
+               }
+           }
         </script>
     </body>
     </html>
