함수의 입력 return

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     </head>
     <body>
         <script>
-            
-           for(var i=0; i<5; i++){
-               
-               for(var j = 0; j < 10; j++){
-                   document.write(String(i)+String(j)+'<br />');
-               }
+           function get_member1() {
+               return  'park';
            }
+           function get_member2() {
+               return 'ji';
+           }
+          alert(get_number1());
+          alert(get_member2());
+
         </script>
     </body>
     </html>
