--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
     </head>
     <body>
         <script>
-           var name = 'parkjihun'
-           alert(name);
+         function get_member() {
+             return ['park', 'JI', 'HUn'];
+         }
+         members=get_member();
 
-           var member = ['W', 'H', 'J', 'J']
-           alert(member[0]);
-           alert(member[1]);
-           alert(member[2]);
-           alert(member[3]);
+         for(var i=0; i < members.length; i++){
+             document.write(members[i].toUpperCase());
+             document.write('<br />');
+         }
 
+        // var arr=[1,2,3,4,];
+        // alert(arr.length);
         </script>
     </body>
     </html>
-    //배열이란?
-    배열(array)이란 연관된 데이터를 모아서 통으로 관리하기 위해서 사용하는 데이터 타입이다. 변수가 하나의 데이터를 저장하기 위한
-    것이라면 배열은 여러 개의 데이터를 하나의 변수에 저장하기 위한 것이라고 할 수 있다.
-    배열에 담겨있는 값을 가져올 때는 대괄호 안에 숫자르 넣는다. 이 숫자를 색인(index)라고 부르고 0부터 시작한다. 즉 첫번째 원소(w)를 가져오려면 대괄호
-    안에 0을 넣어주어야 한다는 것이다. 두번째는 1, 세번째는 2를 입력한다. 이 값을 이용해서 배열에 저장된 값을 가져올 수 있다.
+    // 반복문으로 리스트에 담긴 정보를 하나씩 꺼내보는 코드
