--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
     <body>
         <script>
          var li = ['a', 'b', 'c', 'd'];
-         li.push('e'); //배열의 끝에 원소를 추가하는 방법이다. push는 인자로 전달된 값을 배열(li)에 추가하는 명령어다.
+         li.shift(); // 배열의 첫번째 원소를 제거하는 방법
          alert(li);
 
          var ab = ['p','a','r'];
-         ab.unshift('k'); // 배열의 시작점에 원소를 추가하는 방법이다. 배열 as는 k p a r이 되었다. unshift는 인자로 전달한 값을 배열의 첫번째 원소로 추가하고 배열의 기존 값들의 색인을 1씩 증가시킨다.
+         ab.pop(); //  배열 끝점의 원소를 배열 ab에서 제거한다.
          alert(ab);
 
+
+
          var as = ['p','a','r','k','j','h'];
-         as.splice(5, 0, 'i'); // 다섯번째 인덱스 뒤에 i를 넣고 싶다면, splice는 첫번째 인자에 해당하는 원소부터 다섯번째 인자에 해당하는 원소의 숫자 만큼의 값을 배열로부터 제거한 후에 리턴한다. 
+         as.sort(); // 기본 정렬
+         alert(as);
+
+         var as = ['p','a','r','k','j','h'];
+         as.reverse(); // 역순 정렬
          alert(as); 
         </script>
     </body>
