--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          alert(as);
 
          var as = ['p','a','r','k','j','h'];
-         as.reverse(); // 역순 정렬
+         as.reverse(); 
          alert(as); 
         </script>
     </body>
